--- a/Soulcast/Base.lproj/LaunchScreen.storyboard
+++ b/Soulcast/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +17,26 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchscreen" translatesAutoresizingMaskIntoConstraints="NO" id="FiU-Ed-j10">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="FiU-Ed-j10" secondAttribute="bottom" id="91B-Eg-kLk"/>
+                            <constraint firstItem="FiU-Ed-j10" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="C6C-qt-9ha"/>
+                            <constraint firstItem="FiU-Ed-j10" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="KXX-1l-87T"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="FiU-Ed-j10" secondAttribute="bottom" constant="47" id="T3s-y8-6oa"/>
+                            <constraint firstItem="FiU-Ed-j10" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="t4U-hw-zs2"/>
+                            <constraint firstItem="FiU-Ed-j10" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="uiW-Vm-McY"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="t4U-hw-zs2"/>
+                                <exclude reference="T3s-y8-6oa"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +44,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="launchscreen" width="621" height="1104"/>
+    </resources>
 </document>
